Fix alignment of "alt" button type ("skip").

--- a/scss/_patterns/_widgets.scss
+++ b/scss/_patterns/_widgets.scss
@@ -37,7 +37,7 @@
 
       &.-alt {
         font-size: 1rem;
-        top: 1.35rem;
+        top: 1rem;
 
         &:hover {
           text-decoration: underline;
